--- a/app/src/main/res/menu/main_drawer_menu.xml
+++ b/app/src/main/res/menu/main_drawer_menu.xml
@@ -80,13 +80,14 @@
     <item android:title="@string/menu_group_credits" android:menuCategory="container" >
         <menu>
             <group>
+                <item android:title="@string/fork_of_arsylk"
+                    android:id="@+id/fork_of_arsylk_open" />
+                <item android:title="@string/user_arsylk" android:enabled="false" />
                 <item android:title="@string/user_banana" android:enabled="false" />
                 <item android:title="@string/user_whocares" android:enabled="false" />
                 <item android:title="@string/user_falzar" android:enabled="false" />
                 <item android:title="@string/user_envy" android:enabled="false" />
-                <item
-                        android:id="@+id/discord_open"
-                        android:title="@string/text_join_discord" />
+                <item android:id="@+id/discord_open" android:title="@string/text_join_discord" />
             </group>
         </menu>
     </item>
